syntax="proto3";
package xyz.sx.collectorcore.protobuf;
message Vector3{
    double x=1;
    double y=2;
    double z=3;
}